2007-01-07  Thomas Wood  <thos@gnome.org>

	Patch by:  Elijah Newren <newren@gmail.com>

	* gnome-window-properties.c: (try_spawn_config_tool): Avoid markup in
	translatable messages. Fixes bug 360449.

2006-07-23  Sebastien Bacher  <seb128@debian.org>

	* window-properties.desktop.in.in: don't list the Application category,
	patch by Vincent Fretin <vincent.fretin@gmail.com> (Closes: #344321)

2006-01-03  Rajan Singh  <singh.rajan@wipro.com>

	* gnome-window-properties.c: (fill_radio) (reload_mouse_modifiers) : 
	Added mnemonics.
	* gnome-window-properties.glade : Removed the mnemonic.

2005-11-14  Kjartan Maraas  <kmaraas@gnome.org>

	* gnome-window-properties.c: (main): Remove unused code.

2005-01-02  Sebastien Bacher  <seb128@debian.org>

	* gnome-window-properties.glade: 
	patch from Heikki Paajanen <hepaajan@iki.fi> (based on the patch
	from Andrew Johnson <acjgenius@earthlink.net>) 
	to not set "close" as the default button (Closes: #98202).

2004-12-15  Sebastien Bacher  <seb128@debian.org>

	* window-properties.desktop.in.in: changed the tooltip to respect 
	the HIG.

2004-11-09  Mark McLoughlin  <mark@skynet.ie>

	* Makefile.am: install .desktop file in $(datadir)/applications
	
	* window-properties.desktop.in: add OnlyShowIn=GNOME;

2004-10-14  Jody Goldberg <jody@gnome.org>

	* Release 2.8.1

2004-08-20  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* gnome-window-properties.c: (main):
	Use themed icon for window hint.

2004-07-06  Padraig O'Briain <padraig.obriain@sun.com>

	* gnome-window-properties.glade:  Add mnemnoic widget for
	"Interval before raising" and add some label-for/labelled-by
	relations. Fixes bug #144586.

Mon Jun 21 15:52:57 2004  Jonathan Blandford  <jrb@gnome.org>

	* gnome-window-properties.c (set_alt_click_value): Set the radio
	group to be inconsistent if no matching modifier is found.

	* gnome-window-properties.c (reload_settings): Check for NULL,
	141453

2004-06-07  Kaushal Kumar  <kaushal.kumar@wipro.com>
