@@ -1,3 +1,8 @@
+2007-01-31  Jens Granseuer  <jensgr@gmx.net>
+
+	* gnome-window-properties.c: (main): don't leak the references to the
+	glade dialog and GnomeProgram
+
 2007-01-07  Thomas Wood  <thos@gnome.org>
 
 	Patch by:  Elijah Newren <newren@gmail.com>
